# notes-scanner-rust

./: Cargo.toml
src/: main.rs
static/: output.css
templates/: img.html  root.html
