[package]
name = "notes-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
tower-http = { version = "0.4.4", features = ["fs", "cors", "limit"] }
axum-extra = { version = "0.8.0", features = [] }
tower = "0.4.13"

reqwest = "0.11.22"
sailfish = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
base64 = "0.21.4"
dotenv = "0.15.0"
